diesel_compile_tests/tests/fail/mysql_does_not_support_group_frame_clauses.stderr
error[E0277]: `Groups` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_group_frame_clauses.rs:21:22
   |
21 |         .load::<i64>(&mut connection)
   |          ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoGroupWindowFrameUnit>` is not implemented for `Groups`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `Groups` implements `QueryFragment<DB, IsoGroupWindowFrameUnit>`
             `Groups` implements `QueryFragment<DB>`
   = note: required for `Groups` to implement `QueryFragment<Mysql>`
   = note: 7 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, true>, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Groups, UnboundedPreceding>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, true>, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Groups, UnboundedPreceding>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
